Controlling sorting with handleSort method

--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -5,7 +5,8 @@
 
         <div class="container">
           <app-add (addEvt)="addApt($event)"></app-add>
-          <app-search (queryEvt)="searchApt($event)"></app-search>
+          <app-search (queryEvt)="searchApt($event)" (orderEvt)="orderApt($event)" [orderBy]="orderBy"
+            [orderType]="orderType"></app-search>
           <app-list [aptList]="modifiedList" (deleteEvt)="deleteApt($event)"></app-list>
         </div>
 
