Updating records with handleUpdate()

--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -7,7 +7,7 @@
           <app-add (addEvt)="addApt($event)"></app-add>
           <app-search (queryEvt)="searchApt($event)" (orderEvt)="orderApt($event)" [orderBy]="orderBy"
             [orderType]="orderType"></app-search>
-          <app-list [aptList]="modifiedList" (deleteEvt)="deleteApt($event)"></app-list>
+          <app-list [aptList]="modifiedList" (deleteEvt)="deleteApt($event)" (updateEvt)="updateApt($event)"></app-list>
         </div>
 
       </div><!-- col-md-12 -->
